compiler/tests/golden/errors/semantic_distance.txt
error: type mismatch: expected `ChEBIDrug` (chebi:drug), found `DrugBankDrug` (drugbank:drug): semantic distance 0.4 exceeds threshold 0.2 between chebi:drug and drugbank:drug
  --> /tmp/demetrios_test_XXXX/distance_error.dm:15:21
   |
 15 |     strict_analysis(db);
   |                      ^

Error:   × Type errors:
  │ type mismatch: expected `ChEBIDrug` (chebi:drug), found `DrugBankDrug`
  │ (drugbank:drug): semantic distance 0.4 exceeds threshold 0.2 between
  │ chebi:drug and drugbank:drug